--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,29 +7,6 @@ body {
     height: 100%;
     width: 100%;
 }
-@font-face {
-    font-family: "Poppins-Medium";
-    src: url("/fonts/Poppins-Medium.ttf");
-    font-display: swap;
-}
-@font-face {
-    font-family: "Poppins-Bold";
-    src: url("/fonts/Poppins-Bold.ttf");
-    font-display: swap;
-}
-@font-face {
-    font-family: "Poppins-SemiBold";
-    src: url("/fonts/Poppins-SemiBold.ttf");
-    font-display: swap;
-}
-@font-face {
-    font-family: "Poppins-Regular";
-    src: url("/fonts/Poppins-Regular.ttf");
-    font-display: swap;
-}
-/* <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Sora:wght@400;500;600;700&display=swap" rel="stylesheet"> */
 /* font-family: 'Sora', sans-serif; */
 :root {
     --background: rgb(255, 255, 255);
@@ -39,5 +16,5 @@ body {
 }
 
 * {
-    font-family: "Poppins-Regular";
+    font-family: "Sora", sans-serif;
 }
