--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,6 +6,7 @@ body {
     margin: 0;
     height: 100%;
     width: 100%;
+    background: #f8f3ef;
 }
 /* font-family: 'Sora', sans-serif; */
 :root {
@@ -17,4 +18,20 @@ body {
 
 * {
     font-family: "Sora", sans-serif;
+    color: #212121;
+}
+
+.align-center {
+    display: flex;
+    align-items: center;
+}
+
+.font-14 {
+    font-size: 14px;
+    line-height: 18px;
+}
+
+.font-16 {
+    font-size: 16px;
+    line-height: 20px;
 }
