--- a/src/components/header/Header1.scss
+++ b/src/components/header/Header1.scss
@@ -1,5 +1,6 @@
 .header-1-container {
-    position: sticky;
+    position: fixed;
+    width: 100%;
     top: 0;
     z-index: 100;
     background: #fff;
@@ -45,15 +46,23 @@
                     width: 45px;
                 }
                 &.-option-practice-test {
-                    width: 128px;
+                    width: 132px;
                     font-weight: 700;
-                    .icon {
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-                        margin-left: 4px;
-                    }
+                    background-color: transparent !important;
                 }
+            }
+        }
+    }
+    .-option-practice-test {
+        .icon {
+            justify-content: center;
+            margin-left: 4px;
+            transition: 0.15s all ease;
+        }
+        &.active {
+            background-color: rgba(33, 33, 33, 0.04);
+            .icon {
+                transform: rotate(180deg);
             }
         }
     }
@@ -173,6 +182,27 @@
     }
 }
 
+.menu-component-mobile {
+    padding: 0;
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+    > a {
+        display: block;
+        text-decoration: none;
+    }
+    .header-1-menu {
+        padding: 8px 28px;
+        margin-bottom: 12px;
+        justify-content: space-between;
+        font-size: 14px;
+        line-height: 20px;
+        font-weight: 500;
+    }
+    .-option-practice-test {
+        margin-bottom: 0;
+    }
+}
 #search-component-mobile,
 #menu-component-mobile {
     position: fixed;
@@ -185,5 +215,5 @@
 .header-1-category-container-desktop {
     position: fixed;
     top: 55px;
-    left: 128px;
+    left: 64px;
 }
