--- a/src/components/parent-app/ParentAppLayout.scss
+++ b/src/components/parent-app/ParentAppLayout.scss
@@ -1,5 +1,5 @@
 .take-learning-to-the-next-level {
-    margin-top: 24px;
+    margin-top: 89px; //24 + 64 + 1
     .align-center.-container {
         flex-direction: column;
     }
@@ -46,7 +46,7 @@
     }
 
     @media screen and (min-width: 769px) {
-        margin-top: 40px;
+        margin-top: 93px; // 40 + 52 + 1
         .align-center.-container {
             flex-direction: row;
             justify-content: space-between;
