--- a/src/components/easy-prep/ListApp.scss
+++ b/src/components/easy-prep/ListApp.scss
@@ -105,6 +105,7 @@ $transition: 0.2s all ease;
             border: 1px solid #8e8177;
             background-color: #fbeb9f;
             padding: 16px;
+            text-decoration: none;
             border-radius: 8px;
             justify-content: center;
             cursor: pointer;
