--- a/src/components/easy-prep/ListApp.scss
+++ b/src/components/easy-prep/ListApp.scss
@@ -28,6 +28,9 @@ $transition: 0.2s all ease;
             z-index: 2;
             top: 0;
         }
+        .slider-left {
+            display: none;
+        }
         .slider-right {
             right: 0;
             transform: rotate(180deg);
@@ -46,7 +49,7 @@ $transition: 0.2s all ease;
 
         .blur-gradient-left,
         .blur-gradient-right {
-            width: 72px;
+            width: 48px;
             height: 36px;
             z-index: -1;
             left: 0px;
