--- a/src/components/header/Header1.scss
+++ b/src/components/header/Header1.scss
@@ -71,6 +71,8 @@
             }
             &.-f3 {
                 .search-desktop {
+                    flex: 1;
+                    justify-content: right;
                     display: flex;
                 }
                 .search-icon-mobile {
@@ -94,77 +96,14 @@
     }
 }
 
-.search-component {
-    padding: 8px;
-    border: 1px solid rgba(33, 33, 33, 0.12);
-    background-color: rgba(33, 33, 33, 0.04);
-    border-radius: 6px;
-    width: 100%;
-    height: 20px;
-    position: relative;
-
-    input {
-        width: 100%;
-        padding: 0px 4px;
-        border: none;
-        background: none;
-        line-height: 24px;
-
-        &::placeholder {
-            color: rgba(33, 33, 33, 0.22);
-        }
-
-        &::-ms-input-placeholder {
-            /* Edge 12 -18 */
-            color: rgba(33, 33, 33, 0.22);
-        }
-        &:focus-visible {
-            outline-width: 0;
-        }
-    }
-
-    .search-result-container {
-        border-radius: 10px;
-        position: absolute;
-        top: 42px;
-        left: 0;
-        background-color: #fff;
-        border: 1px solid #f6f6f6;
-        width: calc(100vw - 16px - 16px);
-        min-height: 48px;
-        max-height: 280px; // = 56*5
-        box-shadow: 0 2px 5px 0px rgb(38 51 77 / 4%);
-        .no-result {
-            font-size: 12px;
-            line-height: 16px;
-            text-align: center;
-            padding-top: 8px;
-        }
-
-        .result-item {
-            line-height: 24px;
-            font-size: 12px;
-            padding: 16px;
-            cursor: pointer;
-
-            img {
-                margin-right: 12px;
-            }
-
-            &:hover {
-                background-color: #f0f4f5;
-            }
-        }
-    }
-    @media screen and (min-width: 769px) {
-        max-width: 256px;
-        width: 100%;
-
-        .search-result-container {
-            width: inherit;
-        }
-    }
-}
+// .search-app-frame {
+//     width: 100%;
+//     background-color: red;
+//     @media screen and (min-width: 769px) {
+//         max-width: 256px;
+//         width: 100%;
+//     }
+// }
 
 .search-icon-mobile {
     padding: 6px;
