--- a/src/components/layout/layout-1/Layout1.scss
+++ b/src/components/layout/layout-1/Layout1.scss
@@ -1,3 +1,6 @@
+.layout-1 {
+    font-family: "Sora", sans-serif;
+}
 .header-1-frame {
     height: 65px; // 64 + 1
     @media screen and (min-width: 769px) {
