--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,7 +17,7 @@ body {
 }
 
 * {
-    font-family: "Sora", sans-serif;
+    /* font-family: "Sora", sans-serif; */
     color: #212121;
 }
 
@@ -62,4 +62,37 @@ body {
 /* Handle on hover */
 .overflow-auto::-webkit-scrollbar-thumb:hover {
     background: rgba(33, 33, 33, 0.32);
+}
+
+.v4-border-radius {
+    border-radius: 6px;
+    overflow: hidden;
+}
+
+.v4-font-semi-bold {
+    font-family: "Poppins-Semibold";
+    font-weight: 500; /* for safari using strong, h1, h2, h3,h4 ,.. element*/
+}
+.v4-font-size-12 {
+    font-size: 12px;
+}
+
+.v4-font-size-14 {
+    font-size: 14px;
+}
+
+.v4-font-size-16 {
+    font-size: 16px;
+}
+
+.v4-flex {
+    display: flex;
+}
+
+.v4-button-animtaion {
+    transition: transform 0.15s ease, opacity 0.2s;
+}
+.v4-button-animtaion:hover {
+    transform: translateY(-3px);
+    opacity: 0.9;
 }
