--- a/src/components/header/HeaderV4.scss
+++ b/src/components/header/HeaderV4.scss
@@ -55,9 +55,9 @@
 }
 #navigation_drawer {
     .drawer-right-menu-header-v4 {
-        * {
-            font-family: "Poppins", sans-serif;
-        }
+        // * {
+        // font-family: "Poppins", sans-serif;
+        // }
         max-width: 350px;
         width: calc(100% - 25px);
         padding: 12px;
