--- a/src/container/single-app/HomeSingleApp.scss
+++ b/src/container/single-app/HomeSingleApp.scss
@@ -14,7 +14,8 @@
                 align-items: center;
                 .landing-title-21 {
                     text-align: center;
-                    font-family: "Vampiro One";
+                    // font-family: "Vampiro One";
+                    font-weight: 700;
                     font-size: 36px;
                     line-height: 36px;
                 }
