--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,7 +17,7 @@ body {
 }
 
 * {
-    /* font-family: "Sora", sans-serif; */
+    font-family: "Sora", sans-serif;
     color: #212121;
 }
 
@@ -70,7 +70,7 @@ body {
 }
 
 .v4-font-semi-bold {
-    font-family: "Poppins-Semibold";
+    /* font-family: "Poppins-Semibold"; */
     font-weight: 500; /* for safari using strong, h1, h2, h3,h4 ,.. element*/
 }
 .v4-font-size-12 {
