--- a/src/components/layout/layout-2/Layout2.scss
+++ b/src/components/layout/layout-2/Layout2.scss
@@ -1,10 +1,11 @@
 // font-family: 'Poppins', sans-serif;
 // font-family: 'Vampiro One', system-ui;
-// .layout-2 {
-//     * {
-// font-family: "Poppins", sans-serif;
-//     }
-// }
+.layout-2 {
+    overflow-x: hidden;
+    //     * {
+    // font-family: "Poppins", sans-serif;
+    //     }
+}
 // .header-2-frame {
 //     height: 64px;
 //     @media screen and (min-width: 769px) {
