--- a/src/components/homepage/GridTopic.scss
+++ b/src/components/homepage/GridTopic.scss
@@ -4,11 +4,11 @@
     gap: 8px;
     grid-gap: 8px;
     .v4-grid-topic-item-0 {
-        border: 1px solid #e4e4e4;
+        border: 1px solid var(--border-color);
         display: flex;
         align-items: center;
         cursor: pointer;
-        color: #212121;
+        color: var(--font-color);
         text-decoration: none;
         box-shadow: 0px 2px 4px 0px rgba(33, 33, 33, 0.08);
         background: #fff;
