--- a/src/components/header/HeaderV4.scss
+++ b/src/components/header/HeaderV4.scss
@@ -4,6 +4,7 @@
     .header-v4 {
         position: relative;
         .logo-header-v4 {
+            cursor: pointer;
             display: flex;
             position: absolute;
             left: 50%;
