--- a/src/components/header/Header1.scss
+++ b/src/components/header/Header1.scss
@@ -1,3 +1,9 @@
+.header-1-frame {
+    height: 65px; // 64 + 1
+    @media screen and (min-width: 769px) {
+        height: 53px; //52 + 1
+    }
+}
 .header-1-container {
     position: fixed;
     width: 100%;
