--- a/src/components/study-v4/CountDownV4.scss
+++ b/src/components/study-v4/CountDownV4.scss
@@ -8,7 +8,7 @@
     > span {
         padding-left: 4px;
         padding-top: 4px;
-        width: 106px;
+        width: 112x;
     }
     @media screen and (min-width: 769px) {
         font-size: 20px;
