--- a/src/components/header/Header1.scss
+++ b/src/components/header/Header1.scss
@@ -39,6 +39,7 @@
         }
 
         .header-1-menu {
+            color: #212121;
             text-decoration: none;
             cursor: pointer;
         }
