--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,8 +1,10 @@
 @import "config.css"; /*  Using a string */
 html,
 body {
+    /* để customize drawer, dialog neen set height của 2 cái này  là 100% và overflow = hidden để tránh bị trượt khi bật popup/drawer, còn thành phần giúp scroll là __next*/
     scroll-behavior: smooth;
     box-sizing: border-box;
+    overflow: hidden;
 }
 body {
     margin: 0;
@@ -114,11 +116,8 @@ p {
 
 #__next {
     width: 100%;
-    height: 100%;
-}
-
-html {
-    overflow-y: scroll;
+    height: 100vh;
+    overflow: auto;
     &::-webkit-scrollbar {
         width: 8px;
         display: block !important;
