fix-dialog_drawer

--- a/src/components/study-v4/HeaderStudyV4.scss
+++ b/src/components/study-v4/HeaderStudyV4.scss
@@ -90,3 +90,10 @@
         // }
     }
 }
+
+.customize-swipeable-drawer-bottom {
+    .MuiDrawer-paper {
+        background: transparent !important;
+        overflow-y: visible !important;
+    }
+}
