--- a/src/components/header/HeaderV4.scss
+++ b/src/components/header/HeaderV4.scss
@@ -54,105 +54,105 @@
         }
     }
 }
-#navigation_drawer {
-    .drawer-right-menu-header-v4 {
-        max-width: 350px;
-        width: calc(100% - 25px);
+// #navigation_drawer {
+.drawer-right-menu-header-v4 {
+    max-width: 350px;
+    width: calc(100% - 25px);
+    padding: 12px;
+    background: #fff !important;
+    .button-close-drawer-v4 {
+        cursor: pointer;
         padding: 12px;
-        background: #fff !important;
-        .button-close-drawer-v4 {
-            cursor: pointer;
+        display: flex;
+        width: fit-content;
+        border-radius: 100%;
+        transition: 0.2s all ease;
+
+        &:hover {
+            background-color: rgba(33, 33, 33, 0.12);
+        }
+    }
+    .container-drawer-right-menu-header-v4 {
+        padding: 16px;
+        color: #212121;
+        a {
+            text-decoration: none;
+            color: #212121;
+        }
+        .container-drawer-right-menu-header-v4-1 {
             padding: 12px;
             display: flex;
-            width: fit-content;
-            border-radius: 100%;
-            transition: 0.2s all ease;
+            align-items: center;
+            font-weight: 600;
+            cursor: pointer;
+            // &:not(:first-child) {
+            //     margin-top: 16px;
+            // }
+            > a {
+                font-weight: 600;
+            }
+            .v4-icon-expand {
+                display: flex;
+                transition: 0.2s all;
+                font-size: 14px;
+                &.false {
+                    transform: rotate(360deg);
+                }
+                &.true {
+                    transform: rotate(180deg);
+                }
+            }
+        }
+        #collapse-topic {
+            height: 0;
+            overflow: hidden;
+            transition: all 0.2s;
+        }
+        .v4-app-topic {
+            font-size: 14px;
+            padding: 12px;
+            margin-left: 12px;
+            transition: 0.2s all;
 
             &:hover {
-                background-color: rgba(33, 33, 33, 0.12);
+                background: rgba(33, 33, 33, 0.12);
             }
-        }
-        .container-drawer-right-menu-header-v4 {
-            padding: 16px;
-            color: #212121;
+            &:not(:last-child) {
+                border-bottom: 1px solid #e4e4e4;
+            }
             a {
-                text-decoration: none;
-                color: #212121;
-            }
-            .container-drawer-right-menu-header-v4-1 {
-                padding: 12px;
-                display: flex;
-                align-items: center;
-                font-weight: 600;
-                cursor: pointer;
-                // &:not(:first-child) {
-                //     margin-top: 16px;
-                // }
-                > a {
-                    font-weight: 600;
-                }
-                .v4-icon-expand {
-                    display: flex;
-                    transition: 0.2s all;
-                    font-size: 14px;
-                    &.false {
-                        transform: rotate(360deg);
-                    }
-                    &.true {
-                        transform: rotate(180deg);
-                    }
-                }
-            }
-            #collapse-topic {
-                height: 0;
-                overflow: hidden;
-                transition: all 0.2s;
-            }
-            .v4-app-topic {
-                font-size: 14px;
-                padding: 12px;
-                margin-left: 12px;
-                transition: 0.2s all;
-
-                &:hover {
-                    background: rgba(33, 33, 33, 0.12);
-                }
-                &:not(:last-child) {
-                    border-bottom: 1px solid #e4e4e4;
-                }
-                a {
-                    color: rgba(89, 89, 89);
-                }
-            }
-            .container-drawer-right-menu-header-v4-2 {
-                font-size: 12px;
                 color: rgba(89, 89, 89);
-                display: flex;
-                padding-top: 12px;
-                padding-bottom: 80px;
-                flex-direction: column;
-                align-items: center;
-                width: fit-content;
-                > div:first-child {
-                    width: fit-content;
-                    margin-bottom: 12px;
-                }
             }
         }
-        @media screen and (min-width: 769px) {
-            max-width: 456px;
-            .container-drawer-right-menu-header-v4 {
-                padding: 16px 28px;
+        .container-drawer-right-menu-header-v4-2 {
+            font-size: 12px;
+            color: rgba(89, 89, 89);
+            display: flex;
+            padding-top: 12px;
+            padding-bottom: 80px;
+            flex-direction: column;
+            align-items: center;
+            width: fit-content;
+            > div:first-child {
+                width: fit-content;
+                margin-bottom: 12px;
+            }
+        }
+    }
+    @media screen and (min-width: 769px) {
+        max-width: 456px;
+        .container-drawer-right-menu-header-v4 {
+            padding: 16px 28px;
 
-                .container-drawer-right-menu-header-v4-1 {
-                    font-size: 24px;
-                    text-decoration: none;
-                }
+            .container-drawer-right-menu-header-v4-1 {
+                font-size: 24px;
+                text-decoration: none;
+            }
 
-                .v4-app-topic {
-                    font-size: 18px;
-                }
+            .v4-app-topic {
+                font-size: 18px;
             }
         }
     }
 }
+// }
