--- a/src/components/v4-material/DialogProvider.scss
+++ b/src/components/v4-material/DialogProvider.scss
@@ -36,5 +36,7 @@
 .customize-dialog {
     .MuiDialog-paper {
         margin: 16px;
+        max-width: unset;
+        max-height: unset;
     }
 }
