--- a/src/components/easy-prep/HeaderCategory.scss
+++ b/src/components/easy-prep/HeaderCategory.scss
@@ -56,6 +56,7 @@
             font-weight: 700;
             padding: 16px;
             background: #fff;
+            color: #212121 !important;
             text-align: center;
             border-radius: 8px;
             border: 1px solid #8e8177;
