get-static-props

--- a/src/components/footer/FooterLandingV4.scss
+++ b/src/components/footer/FooterLandingV4.scss
@@ -24,6 +24,10 @@
                 .logo-footer-v4 {
                     display: flex;
                 }
+                .img-logo-footer {
+                    height: 40px; //1:4
+                    max-width: 160px;
+                }
             }
 
             .v4-footer-landing-container-112 {
