--- a/src/components/homepage/GridTopic.scss
+++ b/src/components/homepage/GridTopic.scss
@@ -15,6 +15,7 @@
         transition: all 0.2s;
         .-h_i {
             padding-left: 24px;
+            padding-right: 12px;
             font-size: 14px;
             width: calc(100% - 44px - 24px);
             margin: 0;
@@ -57,7 +58,6 @@
         }
     }
     .topic-levels {
-        height: 0;
         overflow: hidden;
         transition: 0.3s all;
 
@@ -123,6 +123,7 @@
 .v4-topic-level-container {
     background-color: #fff;
     margin-top: 4px;
+    height: 244px; // fix luôn kích thước này
     .v4-topic-level {
         width: fit-content;
         margin: 16px auto;
