--- a/src/components/study-v4/MainStudyView.scss
+++ b/src/components/study-v4/MainStudyView.scss
@@ -15,7 +15,7 @@
                         height: 25px;
                         padding-top: 10px;
                         padding-bottom: 16px;
-                        color: var(--main-color);
+                        color: #7c6f5b;
                         text-decoration: underline;
                     }
                 }
@@ -83,7 +83,7 @@
         }
         .v4-main-study-view-btn-wrapper {
             padding-top: 16px;
-            height: 60px;
+            height: 0px;
             width: 100%;
             #v4-btn-sticky {
                 height: fit-content;
@@ -100,25 +100,6 @@
                     padding: 10px 16px;
                     box-shadow: 0 4px 6px 4px rgba(33, 33, 33, 0.2);
                 }
-                // &.sticky {
-                //     // width: calc(100% - 16px - 16px);
-                //     padding-bottom: 16px;
-                //     // position: fixed;
-                //     bottom: 0;
-                //     left: 16px;
-                //     border-top-right-radius: 6px;
-                //     border-top-left-radius: 6px;
-                //     background: var(--main-background-color);
-                // }
-
-                // @media screen and (min-width: 600px) {
-                //     // vì thẻ Container nó set mức này là padding 24px
-                //     &.sticky {
-                //         width: calc(100% - 24px - 24px);
-                //         padding-bottom: 24px;
-                //         left: 24px;
-                //     }
-                // }
             }
             .v4-main-study-view-btn-0 {
                 background: #7c6f5b;
@@ -144,6 +125,7 @@
             padding: 24px;
             background-color: #fff;
             .v4-test-game-count-down-desktop-0 {
+                display: flex !important;
                 justify-content: center;
                 padding-bottom: 16px;
             }
@@ -161,6 +143,7 @@
                 }
             }
             .v4-main-study-view-btn-wrapper {
+                height: 60px;
                 #v4-btn-sticky {
                     position: relative;
                     &.show {
