--- a/src/components/study-v4/end-test-v4/index.scss
+++ b/src/components/study-v4/end-test-v4/index.scss
@@ -14,7 +14,7 @@
             font-weight: 600;
             font-size: 24px;
             font-style: normal;
-            line-height: normal;
+            line-height: 30px;
 
             &-icon {
                 position: absolute;
@@ -29,7 +29,7 @@
             text-align: center;
             font-size: 12px;
             font-style: normal;
-            line-height: normal;
+            line-height: 15px;
             > * {
                 padding: 0 2px;
             }
@@ -136,11 +136,13 @@
 
             &-title {
                 font-size: 32px;
+                line-height: 40px;
             }
 
             &-description {
                 margin-top: 24px;
                 font-size: 16px;
+                line-height: 21px;
             }
 
             &-progress {
