--- a/src/components/footer/Footer1.scss
+++ b/src/components/footer/Footer1.scss
@@ -27,6 +27,7 @@
                 text-decoration: none;
                 font-size: 12px;
                 line-height: 16px;
+                color: #212121 !important;
             }
 
             a:not(:first-child) {
