--- a/src/components/study-v4/V4QuestionContent.scss
+++ b/src/components/study-v4/V4QuestionContent.scss
@@ -43,3 +43,11 @@
         }
     }
 }
+
+.customize-dialog {
+    .MuiDialog-paper {
+        margin: 16px;
+        max-width: unset;
+        max-height: unset;
+    }
+}
