--- a/src/components/study-v4/end-test-v4/index.scss
+++ b/src/components/study-v4/end-test-v4/index.scss
@@ -30,6 +30,9 @@
             font-size: 12px;
             font-style: normal;
             line-height: 15px;
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
             > * {
                 padding: 0 2px;
             }
