--- a/src/components/homepage/GridTopic.scss
+++ b/src/components/homepage/GridTopic.scss
@@ -20,6 +20,13 @@
             width: calc(100% - 44px - 24px);
             margin: 0;
             line-height: 21px;
+
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-line-clamp: 2; /* number of lines to show */
+            line-clamp: 2;
+            -webkit-box-orient: vertical;
         }
         .v4-grid-topic-icon {
             width: 44px;
