--- a/src/components/homepage/ListState.scss
+++ b/src/components/homepage/ListState.scss
@@ -19,9 +19,10 @@
         font-size: 14px;
         font-weight: 600;
         line-height: 18px;
-
+        border-radius: 4px;
         &:hover {
             color: #fff;
+            background: #ffffff1f;
         }
     }
 }
