--- a/src/container/single-app/HomeSingleApp.scss
+++ b/src/container/single-app/HomeSingleApp.scss
@@ -14,6 +14,7 @@
                 align-items: center;
                 .landing-title-21 {
                     text-align: center;
+                    text-transform: capitalize;
                     // font-family: "Vampiro One";
                     font-weight: 700;
                     font-size: 36px;
@@ -36,6 +37,7 @@
     .v4-landing-practice-test-0,
     .v4-landing-banner-download-app-0 {
         h2 {
+            text-transform: capitalize;
             font-size: 20px;
             font-weight: 700;
             padding: 24px 0;
@@ -107,11 +109,22 @@
             font-size: 18px;
             font-weight: 600;
             line-height: 23px;
+            text-transform: capitalize;
             text-align: center;
             color: #fff;
             padding: 12px 0;
             width: 224px;
             margin: 52px auto 18px;
+            cursor: pointer;
+        }
+        .not-your-state {
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 18px;
+            text-align: center;
+            width: 112px;
+            margin: 0 auto;
+            text-decoration: underline;
             cursor: pointer;
         }
     }
