--- a/src/components/study-v4/MainStudyView.scss
+++ b/src/components/study-v4/MainStudyView.scss
@@ -1,7 +1,7 @@
 .v4-main-study-view-0 {
     .v4-main-study-view-1 {
-        min-height: calc(100vh - 60px - 52px - 24px - 345px);
-        // min-height: 360px; // cái này để hiện loading nhìn đỡ bị giật hơn
+        // min-height: calc(100vh - 60px - 52px - 24px - 345px);
+        min-height: 360px; // cái này để hiện loading nhìn đỡ bị giật hơn
         .v4-main-study-view-question-content-0 {
             background-color: #fff;
             padding: 12px;
@@ -86,6 +86,11 @@
             padding-top: 16px;
             height: 0px;
             width: 100%;
+
+            .keyboard {
+                display: none;
+            }
+
             #v4-btn-sticky {
                 height: fit-content;
                 background: #fff;
@@ -122,7 +127,8 @@
 
     @media screen and (min-width: 769px) {
         .v4-main-study-view-1 {
-            min-height: calc(100vh - 53px - 70px - 16px - 200px - 24px - 24px - 16px);
+            min-height: 320px;
+            // min-height: calc(100vh - 53px - 70px - 16px - 200px - 24px - 24px - 16px);
             padding: 24px;
             background-color: #fff;
             .v4-test-game-count-down-desktop-0 {
@@ -132,7 +138,7 @@
             }
             .v4-main-study-view-question-content-0 {
                 padding: 0;
-                padding-bottom: 24px;
+                // padding-bottom: 24px;
             }
             .v4-explanation-detail {
                 .v4-explanation-detail-title {
@@ -145,10 +151,39 @@
             }
             .v4-main-study-view-btn-wrapper {
                 height: 60px;
+
+                .keyboard {
+                    position: relative;
+                    z-index: 5;
+                    display: block;
+                    .border-1 {
+                        position: absolute;
+                        border: 1px solid #2121211f;
+                        border-radius: 8px;
+                        height: 42px;
+                        width: calc(100% - 1px - 1px - 146px - 146px - 16px - 16px);
+                        left: 50%;
+                        margin-top: 10px;
+                        transform: translateX(-50%);
+
+                        .border-2 {
+                            height: 100%;
+                            border-radius: 4px;
+                            padding: 0 16px;
+                            box-shadow: 0px 0px 10px 0px rgba(33, 33, 33, 0.16);
+                            display: flex;
+                            justify-content: right;
+                            align-items: center;
+                        }
+                    }
+                }
+
                 #v4-btn-sticky {
                     position: relative;
                     &.show {
                         box-shadow: none;
+                        width: 100%;
+                        padding: 10px 0 0 0;
                     }
                 }
                 .v4-main-study-view-btn-0 {
