--- a/src/components/study-v4/StudyView.scss
+++ b/src/components/study-v4/StudyView.scss
@@ -46,15 +46,15 @@
         }
     }
 
-    // #v4-main-study-other-content {
-    // position: absolute;
-    // top: 100vh;
-    // transition: 0.2s all;
-    // &.nested {
-    //     position: relative;
-    //     top: 0;
-    // }
-    // }
+    #v4-main-study-other-content {
+        position: absolute;
+        top: 100vh;
+        transition: 0.2s all;
+        &.nested {
+            position: relative;
+            top: 0;
+        }
+    }
     @media screen and (min-width: 769px) {
         min-height: calc(100vh - 52px - 1px); //52: header, 1: border
 
