--- a/src/components/study-v4/StudyView.scss
+++ b/src/components/study-v4/StudyView.scss
@@ -68,6 +68,7 @@
                 a {
                     line-height: 20px;
                     color: #212121 !important;
+                    text-transform: capitalize;
                 }
                 img {
                     padding: 0 4px;
