--- a/src/components/study-v4/end-test-v4/index.scss
+++ b/src/components/study-v4/end-test-v4/index.scss
@@ -130,6 +130,10 @@
                 background-color: transparent;
                 color: #7c6f5b;
             }
+            .test-btn {
+                background-color: #7c6f5b;
+                color: #fff;
+            }
         }
     }
     @media screen and (min-width: 769px) {
