--- a/src/components/header/HeaderV4.scss
+++ b/src/components/header/HeaderV4.scss
@@ -106,13 +106,16 @@
             }
         }
         #collapse-topic,
-        #collapse-test {
+        #collapse-test,
+        #collapse-state {
             height: 0;
             overflow: hidden;
             transition: all 0.2s;
         }
+
         .v4-app-topic,
-        .v4-app-test {
+        .v4-app-test,
+        .v4-app-state {
             font-size: 14px;
             padding: 12px;
             margin-left: 12px;
@@ -126,6 +129,43 @@
             }
             a {
                 color: rgba(89, 89, 89);
+            }
+        }
+        #collapse-content-state {
+            border-radius: 8px;
+            height: 392px; // 8 lines
+            overflow: auto;
+            padding-right: 0;
+            background-color: rgba(33, 33, 33, 0.8);
+            border-right: 6px solid transparent;
+            .v4-app-state {
+                margin-right: 6px;
+                font-size: 16px;
+                line-height: 24px;
+                cursor: pointer;
+                &:hover {
+                    background: rgba(255, 255, 255, 0.039);
+                    margin-left: 0;
+                    padding: 12px 18px 12px 24px;
+                    margin-right: 0;
+                }
+                &:not(:last-child) {
+                    border-bottom: 1px solid rgba(255, 255, 255, 0.12);
+                }
+                a {
+                    color: #fff;
+                }
+            }
+
+            /* Handle */
+            &::-webkit-scrollbar-thumb {
+                background: #d9d9d9;
+                border-radius: 10px;
+            }
+
+            /* Handle on hover */
+            &::-webkit-scrollbar-thumb:hover {
+                background: #d9d9d9;
             }
         }
         .container-drawer-right-menu-header-v4-2 {
