--- a/src/components/study-v4/end-test-v4/index.scss
+++ b/src/components/study-v4/end-test-v4/index.scss
@@ -124,11 +124,15 @@
                 background-color: #7c6f5b;
                 color: #fff;
             }
-            .btn-theme-1,
-            .btn-theme-2 {
+            .btn-theme-1 {
                 border: 1px solid #7c6f5b;
                 background-color: transparent;
                 color: #7c6f5b;
+            }
+            .btn-theme-2 {
+                border: 1px solid #7c6f5b;
+                background-color: #7c6f5b;
+                color: #fff;
             }
             .test-btn {
                 background-color: #7c6f5b;
