--- a/src/components/study-v4/end-test-v4/ReviewAnswer.scss
+++ b/src/components/study-v4/end-test-v4/ReviewAnswer.scss
@@ -1,6 +1,7 @@
 .v4-review-answer {
-    position: absolute;
-    left: 0;
+    // position: absolute;
+    // left: 0;
+    overflow: hidden;
     background: #fff;
     margin-top: 12px;
     .v4-review-answer-title {
